escaping strings in both keys and other json strings